--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome to My Web Page</h1>
+    <h2>About This Page</h2>
     <p>This is a simple webpage created as part of a lab assignment. It includes different HTML elements styled using CSS.</p>
     
     <ol>
