Add descriptive paragraph

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>Welcome to My Web Page</h1>
     <h2>About This Page</h2>
     <p>This is a simple webpage created as part of a lab assignment. It includes different HTML elements styled using CSS.</p>
-    
+    <p>This page was created as part of a lab assignment for learning HTML and CSS.</p>
+
     <ol>
         <li>First item</li>
         <li>Second item</li>
