Add interactive button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h2>About This Page</h2>
     <p>This is a simple webpage created as part of a lab assignment. It includes different HTML elements styled using CSS.</p>
     <p>This page was created as part of a lab assignment for learning HTML and CSS.</p>
+    <button onclick="alert('Welcome!')">Click Me</button>
 
     <ol>
         <li>First item</li>
